# SIN-Code-Intent-Based-Diffing

./: CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  USAGE.md
src/sin_code_ibd/: __init__.doc.md  __init__.py  __init__.py.doc.md  ast_diff.doc.md  ast_diff.py  ast_diff.py.doc.md  cli.py  intent.doc.md  intent.py  intent.py.doc.md  intent_summarizer.py  mcp_server.doc.md  mcp_server.py  nodes.doc.md  nodes.py  report.doc.md  report.py  risk.doc.md  risk.py  risk_scorer.py
src/sin_code_ibd/parsers/: __init__.doc.md  __init__.py  __init__.py.doc.md  js_parser.doc.md  js_parser.py  python_parser.doc.md  python_parser.py  ts_parser.doc.md  ts_parser.py
tests/: test_ast_diff.py  test_intent.py  test_nodes_report.py  test_parsers.py  test_risk.py
