[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sin-code-ibd"
version = "0.1.0"
description = "SIN-Code-Intent-Based-Diffing — AST-based semantic diffing with intent and risk analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "SIN-Code", email = "sin@example.com"}]
keywords = ["diff", "ast", "semantic", "intent", "risk", "code-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tree-sitter>=0.20; extra == 'js'",
    "tree-sitter-javascript>=0.20; extra == 'js'",
    "tree-sitter-typescript>=0.20; extra == 'js'",
]

[project.optional-dependencies]
js = ["tree-sitter>=0.20", "tree-sitter-javascript>=0.20", "tree-sitter-typescript>=0.20"]

mcp = ["mcp[cli]>=1.2"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/SIN-Rotator/SIN-Code-Intent-Based-Diffing"
Repository = "https://github.com/SIN-Rotator/SIN-Code-Intent-Based-Diffing"

[tool.hatch.build.targets.wheel]
packages = ["src/sin_code_ibd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/sin_code_ibd"]
